--- a/index.html
+++ b/index.html
@@ -6,13 +6,34 @@
   </head>
   <body>
     <h1>Visualizacion - AG1</h1>
-    <a href="/me.html">My other page</a>
+    URL: <a href="https://web-platform-kysdh2.stackblitz.io"> https://web-platform-kysdh2.stackblitz.io</a>
+    <br>
+    Github: <a href="https://github.com/jmcs1983/Visualizacion---AGs"> https://github.com/jmcs1983/Visualizacion---AGs</a>
+    <br>
+    Nombre: José Manuel Ciscar Soriano
+
+    <h2> Emisiones CO2
+      <br>
+       <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR98aKHJzqecJcUEt9pfo90ecy4a4QQ2yYPCzY7mpJ8dkqPyVo7gfnz4rLrs_65leO-ocS6sYrVB3sH/pubchart?oid=1013000890&amp;format=interactive"></iframe> 
+      <br>
+       <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR98aKHJzqecJcUEt9pfo90ecy4a4QQ2yYPCzY7mpJ8dkqPyVo7gfnz4rLrs_65leO-ocS6sYrVB3sH/pubchart?oid=1398456938&amp;format=interactive"></iframe>
+      <br>
+       <iframe title="Emisiones CO2" aria-label="chart" id="datawrapper-chart-ax5rE" src="https://datawrapper.dwcdn.net/ax5rE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+
+
+
+    <h1>Visualizacion - AG2</h1>
+
+    <h1>Visualizacion - AG3</h1>
+
   </body>
- <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR98aKHJzqecJcUEt9pfo90ecy4a4QQ2yYPCzY7mpJ8dkqPyVo7gfnz4rLrs_65leO-ocS6sYrVB3sH/pubchart?oid=1013000890&amp;format=interactive"></iframe> 
 
- <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR98aKHJzqecJcUEt9pfo90ecy4a4QQ2yYPCzY7mpJ8dkqPyVo7gfnz4rLrs_65leO-ocS6sYrVB3sH/pubchart?oid=1398456938&amp;format=interactive"></iframe>
 
- <iframe title="Emisiones CO2" aria-label="chart" id="datawrapper-chart-ax5rE" src="https://datawrapper.dwcdn.net/ax5rE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+
+
+
+
+
 
  <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSaTQIfT3W1UvdWCP8s9xfGPmel2aN2yETWFHMQ5hCeeIGj6jsRWvGpY-D56R3P-94vBJj4vvAN5zPN/pubchart?oid=1256502568&amp;format=interactive"></iframe>
 
