--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
       <br>
        <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR98aKHJzqecJcUEt9pfo90ecy4a4QQ2yYPCzY7mpJ8dkqPyVo7gfnz4rLrs_65leO-ocS6sYrVB3sH/pubchart?oid=1398456938&amp;format=interactive"></iframe>
       <br>
-       <iframe title="Emisiones CO2" aria-label="chart" id="datawrapper-chart-ax5rE" src="https://datawrapper.dwcdn.net/ax5rE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
-
-
+       <iframe title="Emisiones CO2" aria-label="chart" id="datawrapper-chart-ax5rE" src="https://datawrapper.dwcdn.net/ax5rE/3/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+      <br>
+    <h2> Cotización de valores y volúmenes de mercado
+      <br>
+       <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSaTQIfT3W1UvdWCP8s9xfGPmel2aN2yETWFHMQ5hCeeIGj6jsRWvGpY-D56R3P-94vBJj4vvAN5zPN/pubchart?oid=1256502568&amp;format=interactive"></iframe>
+      <br>
+    <h2> Top 10 Emisiones CO2 en 2018
+      <br>
+      <br>
+      <iframe title="Top 10 Emisiones CO2 en 2018" aria-label="Stacked Bars" id="datawrapper-chart-IWMHE" src="https://datawrapper.dwcdn.net/IWMHE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="380"></iframe>
+      <br>
 
     <h1>Visualizacion - AG2</h1>
 
@@ -35,6 +43,6 @@
 
 
 
- <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSaTQIfT3W1UvdWCP8s9xfGPmel2aN2yETWFHMQ5hCeeIGj6jsRWvGpY-D56R3P-94vBJj4vvAN5zPN/pubchart?oid=1256502568&amp;format=interactive"></iframe>
+
 
 </html>
