--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <h2> Top 10 Emisiones CO2 en 2018
       <br>
       <br>
-      <iframe title="Top 10 Emisiones CO2 en 2018" aria-label="Stacked Bars" id="datawrapper-chart-IWMHE" src="https://datawrapper.dwcdn.net/IWMHE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="380"></iframe>
+      <iframe title="Top 10 Emisiones CO2 en 2018" aria-label="Stacked Bars" id="datawrapper-chart-IWMHE" src="https://datawrapper.dwcdn.net/IWMHE/8/" scrolling="no" frameborder="0" style="border: none;" width="600" height="380"></iframe>
+</script>
+</script>
+</script>
       <br>
 
     <h1>Visualizacion - AG2</h1>
